--- a/source/xzs/src/main/resources/static/student/index.html
+++ b/source/xzs/src/main/resources/static/student/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"><meta http-equiv="Pragma" content="no-cache"><meta http-equiv="Expires" content="0"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="favicon.ico"><title>学之思开源考试系统</title><style>html {
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"><meta http-equiv="Pragma" content="no-cache"><meta http-equiv="Expires" content="0"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="favicon.ico"><title>学之思考试系统</title><style>html {
             height: 100%;
             width: 100%;
         }
@@ -14,4 +14,29 @@
         hm.src = 'https://hm.baidu.com/hm.js?cd8218cd51f800ed2b73e5751cb3f4f9'
         var s = document.getElementsByTagName('script')[0]
         s.parentNode.insertBefore(hm, s)
-      })()</script><link href="static/css/chunk-0aeb5f39.3495b673.css" rel="prefetch"><link href="static/css/chunk-113dc76b.b56209ba.css" rel="prefetch"><link href="static/css/chunk-1ecaf02c.87ccd637.css" rel="prefetch"><link href="static/css/chunk-261045d2.f72e8178.css" rel="prefetch"><link href="static/css/chunk-29e872af.ee265b23.css" rel="prefetch"><link href="static/css/chunk-352e2714.87ccd637.css" rel="prefetch"><link href="static/css/chunk-41e1665a.c8a41713.css" rel="prefetch"><link href="static/css/chunk-54cf4066.54efd6ce.css" rel="prefetch"><link href="static/css/chunk-766c7376.ad364b97.css" rel="prefetch"><link href="static/css/chunk-c04a81d4.87ccd637.css" rel="prefetch"><link href="static/css/chunk-eab8a8ca.87ccd637.css" rel="prefetch"><link href="static/js/chunk-0aeb5f39.185a1faf.js" rel="prefetch"><link href="static/js/chunk-113dc76b.173ccc53.js" rel="prefetch"><link href="static/js/chunk-1ecaf02c.a4319f51.js" rel="prefetch"><link href="static/js/chunk-261045d2.960f12b2.js" rel="prefetch"><link href="static/js/chunk-29e872af.387f49ac.js" rel="prefetch"><link href="static/js/chunk-2d20f362.279fd8ae.js" rel="prefetch"><link href="static/js/chunk-352e2714.ba05addc.js" rel="prefetch"><link href="static/js/chunk-41e1665a.a9d420f7.js" rel="prefetch"><link href="static/js/chunk-54cf4066.451f715c.js" rel="prefetch"><link href="static/js/chunk-6e89ea97.935c15d5.js" rel="prefetch"><link href="static/js/chunk-766c7376.62e47ecf.js" rel="prefetch"><link href="static/js/chunk-c04a81d4.eefd500c.js" rel="prefetch"><link href="static/js/chunk-eab8a8ca.157e1e16.js" rel="prefetch"><link href="static/css/chunk-vendors.23fc2e8f.css" rel="preload" as="style"><link href="static/css/index.1265a0a5.css" rel="preload" as="style"><link href="static/js/chunk-vendors.cec7fd6f.js" rel="preload" as="script"><link href="static/js/index.c0f01259.js" rel="preload" as="script"><link href="static/css/chunk-vendors.23fc2e8f.css" rel="stylesheet"><link href="static/css/index.1265a0a5.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but vue-demo doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="static/js/chunk-vendors.cec7fd6f.js"></script><script src="static/js/index.c0f01259.js"></script></body></html>
+      })()</script><link href="static/css/chunk-0aeb5f39.3495b673.css" rel="prefetch"><link href="static/css/chunk-113dc76b.b56209ba.css" rel="prefetch"><link href="static/css/chunk-1ecaf02c.87ccd637.css" rel="prefetch"><link href="static/css/chunk-261045d2.f72e8178.css" rel="prefetch"><link href="static/css/chunk-29e872af.ee265b23.css" rel="prefetch"><link href="static/css/chunk-352e2714.87ccd637.css" rel="prefetch"><link href="static/css/chunk-41e1665a.c8a41713.css" rel="prefetch"><link href="static/css/chunk-54cf4066.54efd6ce.css" rel="prefetch"><link href="static/css/chunk-766c7376.ad364b97.css" rel="prefetch"><link href="static/css/chunk-c04a81d4.87ccd637.css" rel="prefetch"><link href="static/css/chunk-eab8a8ca.87ccd637.css" rel="prefetch"><link href="static/js/chunk-0aeb5f39.185a1faf.js" rel="prefetch"><link href="static/js/chunk-113dc76b.173ccc53.js" rel="prefetch"><link href="static/js/chunk-1ecaf02c.a4319f51.js" rel="prefetch"><link href="static/js/chunk-261045d2.960f12b2.js" rel="prefetch"><link href="static/js/chunk-29e872af.387f49ac.js" rel="prefetch"><link href="static/js/chunk-2d20f362.279fd8ae.js" rel="prefetch"><link href="static/js/chunk-352e2714.ba05addc.js" rel="prefetch"><link href="static/js/chunk-41e1665a.a9d420f7.js" rel="prefetch"><link href="static/js/chunk-54cf4066.451f715c.js" rel="prefetch"><link href="static/js/chunk-6e89ea97.935c15d5.js" rel="prefetch"><link href="static/js/chunk-766c7376.62e47ecf.js" rel="prefetch"><link href="static/js/chunk-c04a81d4.eefd500c.js" rel="prefetch"><link href="static/js/chunk-eab8a8ca.157e1e16.js" rel="prefetch"><link href="static/css/chunk-vendors.23fc2e8f.css" rel="preload" as="style"><link href="static/css/index.1265a0a5.css" rel="preload" as="style"><link href="static/js/chunk-vendors.cec7fd6f.js" rel="preload" as="script"><link href="static/js/index.c0f01259.js" rel="preload" as="script"><link href="static/css/chunk-vendors.23fc2e8f.css" rel="stylesheet"><link href="static/css/index.1265a0a5.css" rel="stylesheet">
+<style>
+/* Force hide footer elements */
+.student-footer,
+.foot-container,
+.foot-copyright,
+.footer-main,
+[class*="footer"] {
+  display: none !important;
+  visibility: hidden !important;
+  height: 0 !important;
+  overflow: hidden !important;
+}
+</style>
+</head><body><noscript><strong>We're sorry but vue-demo doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="static/js/chunk-vendors.cec7fd6f.js"></script><script src="static/js/index.c0f01259.js"></script><script>
+// Remove footer elements - Safe version
+window.addEventListener('load', function() {
+  setTimeout(function() {
+    // Only remove footer elements specifically
+    const footerElements = document.querySelectorAll('.student-footer, .foot-container, .foot-copyright');
+    footerElements.forEach(function(element) {
+      element.style.display = 'none';
+    });
+  }, 1000);
+});
+</script></body></html>
